@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-05-25 [B] Porting the security fix that lead to the release of cpg1.4.27 for cpg1.5.x (making sure that image_processor.php doesn't exist) {GauGau}
 2010-05-24 [D] Added screenshots to install screen documentation {GauGau}
 2010-05-24 [D] Added fullsize jquery plugin to docs {GauGau}
 2010-05-20 [S] Fixed potential XSS issue (thread ID 64734) {eenemeenemuu}
